WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30664
m_webView is not private of the EditorClientGtk
https://bugs.webkit.org/show_bug.cgi?id=30664
Summary
m_webView is not private of the EditorClientGtk
Alejandro G. Castro
Reported
2009-10-21 23:54:45 PDT
Currently m_webView is a public attribute.
Attachments
Proposed patch
(1017 bytes, patch)
2009-10-21 23:56 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2009-10-21 23:56:45 PDT
Created
attachment 41640
[details]
Proposed patch
Xan Lopez
Comment 2
2009-10-22 02:25:18 PDT
Comment on
attachment 41640
[details]
Proposed patch r=me
WebKit Commit Bot
Comment 3
2009-10-22 03:49:54 PDT
Comment on
attachment 41640
[details]
Proposed patch Clearing flags on attachment: 41640 Committed
r49936
: <
http://trac.webkit.org/changeset/49936
>
WebKit Commit Bot
Comment 4
2009-10-22 03:49:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug