2009-10-22  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Xan Lopez.

        m_webView should be private attribute of the EditorClientGtk.
        https://bugs.webkit.org/show_bug.cgi?id=30664

        * WebKit/gtk/WebCoreSupport/EditorClientGtk.h:

Canonical link: https://commits.webkit.org/41390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49936 268f45cc-cd09-0410-ab3c-d52691b4dbfc