WebKit/gtk/WebCoreSupport/EditorClientGtk.h
@@ -118,6 +118,7 @@ namespace WebKit {
         virtual void getGuessesForWord(const WebCore::String&, WTF::Vector<WebCore::String>& guesses);
         virtual void setInputMethodState(bool enabled);
 
+    private:
         WebKitWebView* m_webView;
     };
 }
